# glasgow-bin-api

./: Cargo.toml  Dockerfile
src/: main.rs
