[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
env_logger = "0.9.0"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }

