[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13.0"
serde_json = "1.0"
